Port to a slight degree. Still much which would need to be done.
This was simply a test and an audit to figure out how much work it would take to port the base codebase to Legacy Forge (specifically, Forge 1.8.9)