@@ -3,35 +3,44 @@ package net.caffeinemc.mods.sodium.client.data.fingerprint;
 import com.google.gson.Gson;
 import com.google.gson.annotations.SerializedName;
 import net.caffeinemc.mods.sodium.client.util.FileUtil;
-import net.fabricmc.loader.api.FabricLoader;
+import net.minecraftforge.fml.common.Loader;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
+import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Objects;
 
-public record HashedFingerprint(
-        @SerializedName("v")
-        int version,
-
-        @NotNull
-        @SerializedName("s")
-        String saltHex,
-
-        @NotNull
-        @SerializedName("u")
-        String uuidHashHex,
-
-        @NotNull
-        @SerializedName("p")
-        String pathHashHex,
-
-        @SerializedName("t")
-        long timestamp)
-{
+public class HashedFingerprint {
     public static final int CURRENT_VERSION = 1;
+
+    @SerializedName("v")
+    public final int version;
+
+    @NotNull
+    @SerializedName("s")
+    public final String saltHex;
+
+    @NotNull
+    @SerializedName("u")
+    public final String uuidHashHex;
+
+    @NotNull
+    @SerializedName("p")
+    public final String pathHashHex;
+
+    @SerializedName("t")
+    public final long timestamp;
+
+    public HashedFingerprint(int version, @NotNull String saltHex, @NotNull String uuidHashHex, @NotNull String pathHashHex, long timestamp) {
+        this.version = version;
+        this.saltHex = saltHex;
+        this.uuidHashHex = uuidHashHex;
+        this.pathHashHex = pathHashHex;
+        this.timestamp = timestamp;
+    }
 
     public static @Nullable HashedFingerprint loadFromDisk() {
         Path path = getFilePath();
@@ -43,13 +52,14 @@ public record HashedFingerprint(
         HashedFingerprint data;
 
         try {
-            data = new Gson()
-                    .fromJson(Files.readString(path), HashedFingerprint.class);
+            byte[] bytes = Files.readAllBytes(path);
+            String json = new String(bytes);
+            data = new Gson().fromJson(json, HashedFingerprint.class);
         } catch (IOException e) {
             throw new RuntimeException("Failed to load data file", e);
         }
 
-        if (data.version() != CURRENT_VERSION) {
+        if (data.version != CURRENT_VERSION) {
             return null;
         }
 
@@ -68,8 +78,6 @@ public record HashedFingerprint(
     }
 
     private static Path getFilePath() {
-        return FabricLoader.getInstance()
-                .getConfigDir()
-                .resolve("sodium-fingerprint.json");
+        return new File(Loader.instance().getConfigDir(), "sodium-fingerprint.json").toPath();
     }
 }
