@@ -6,14 +6,16 @@ import java.nio.file.Path;
 import java.nio.file.StandardCopyOption;
 
 public class FileUtil {
+
     public static void writeTextRobustly(String text, Path path) throws IOException {
         // Use a temporary location next to the config's final destination
         Path tempPath = path.resolveSibling(path.getFileName() + ".tmp");
 
         // Write the file to our temporary location
-        Files.writeString(tempPath, text);
+        Files.write(tempPath, text.getBytes());
 
         // Atomically replace the old config file (if it exists) with the temporary file
         Files.move(tempPath, path, StandardCopyOption.ATOMIC_MOVE, StandardCopyOption.REPLACE_EXISTING);
     }
+
 }
